@@ -2171,6 +2171,41 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Asynchronously add application tokens for renewal.    *    * @param applicationId    *          added application    * @param ts    *          tokens    * @param shouldCancelAtEnd    *          true if tokens should be canceled when the app is done else false.    * @param user    *          user    */
+DECL|method|addApplicationAsyncDuringRecovery (ApplicationId applicationId, Credentials ts, boolean shouldCancelAtEnd, String user)
+specifier|public
+name|void
+name|addApplicationAsyncDuringRecovery
+parameter_list|(
+name|ApplicationId
+name|applicationId
+parameter_list|,
+name|Credentials
+name|ts
+parameter_list|,
+name|boolean
+name|shouldCancelAtEnd
+parameter_list|,
+name|String
+name|user
+parameter_list|)
+block|{
+name|processDelegationTokenRenewerEvent
+argument_list|(
+operator|new
+name|DelegationTokenRenewerAppRecoverEvent
+argument_list|(
+name|applicationId
+argument_list|,
+name|ts
+argument_list|,
+name|shouldCancelAtEnd
+argument_list|,
+name|user
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Synchronously renew delegation tokens.    * @param user user    */
 DECL|method|addApplicationSync (ApplicationId applicationId, Credentials ts, boolean shouldCancelAtEnd, String user)
 specifier|public
@@ -2210,12 +2245,12 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|handleAppSubmitEvent (DelegationTokenRenewerAppSubmitEvent evt)
+DECL|method|handleAppSubmitEvent (AbstractDelegationTokenRenewerAppEvent evt)
 specifier|private
 name|void
 name|handleAppSubmitEvent
 parameter_list|(
-name|DelegationTokenRenewerAppSubmitEvent
+name|AbstractDelegationTokenRenewerAppEvent
 name|evt
 parameter_list|)
 throws|throws
@@ -4305,6 +4340,28 @@ elseif|else
 if|if
 condition|(
 name|evt
+operator|instanceof
+name|DelegationTokenRenewerAppRecoverEvent
+condition|)
+block|{
+name|DelegationTokenRenewerAppRecoverEvent
+name|appRecoverEvt
+init|=
+operator|(
+name|DelegationTokenRenewerAppRecoverEvent
+operator|)
+name|evt
+decl_stmt|;
+name|handleDTRenewerAppRecoverEvent
+argument_list|(
+name|appRecoverEvt
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|evt
 operator|.
 name|getType
 argument_list|()
@@ -4432,29 +4489,61 @@ block|}
 block|}
 end_class
 
+begin_function
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|method|handleDTRenewerAppRecoverEvent ( DelegationTokenRenewerAppRecoverEvent event)
+specifier|private
+name|void
+name|handleDTRenewerAppRecoverEvent
+parameter_list|(
+name|DelegationTokenRenewerAppRecoverEvent
+name|event
+parameter_list|)
+block|{
+try|try
+block|{
+comment|// Setup tokens for renewal during recovery
+name|DelegationTokenRenewer
+operator|.
+name|this
+operator|.
+name|handleAppSubmitEvent
+argument_list|(
+name|event
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Unable to add the application to the delegation token renewer."
+argument_list|,
+name|t
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_function
+
 begin_class
 DECL|class|DelegationTokenRenewerAppSubmitEvent
 specifier|static
 class|class
 name|DelegationTokenRenewerAppSubmitEvent
 extends|extends
-name|DelegationTokenRenewerEvent
+name|AbstractDelegationTokenRenewerAppEvent
 block|{
-DECL|field|credentials
-specifier|private
-name|Credentials
-name|credentials
-decl_stmt|;
-DECL|field|shouldCancelAtEnd
-specifier|private
-name|boolean
-name|shouldCancelAtEnd
-decl_stmt|;
-DECL|field|user
-specifier|private
-name|String
-name|user
-decl_stmt|;
 DECL|method|DelegationTokenRenewerAppSubmitEvent (ApplicationId appId, Credentials credentails, boolean shouldCancelAtEnd, String user)
 specifier|public
 name|DelegationTokenRenewerAppSubmitEvent
@@ -4476,9 +4565,113 @@ name|super
 argument_list|(
 name|appId
 argument_list|,
+name|credentails
+argument_list|,
+name|shouldCancelAtEnd
+argument_list|,
+name|user
+argument_list|,
 name|DelegationTokenRenewerEventType
 operator|.
 name|VERIFY_AND_START_APPLICATION
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+begin_class
+DECL|class|DelegationTokenRenewerAppRecoverEvent
+specifier|static
+class|class
+name|DelegationTokenRenewerAppRecoverEvent
+extends|extends
+name|AbstractDelegationTokenRenewerAppEvent
+block|{
+DECL|method|DelegationTokenRenewerAppRecoverEvent (ApplicationId appId, Credentials credentails, boolean shouldCancelAtEnd, String user)
+specifier|public
+name|DelegationTokenRenewerAppRecoverEvent
+parameter_list|(
+name|ApplicationId
+name|appId
+parameter_list|,
+name|Credentials
+name|credentails
+parameter_list|,
+name|boolean
+name|shouldCancelAtEnd
+parameter_list|,
+name|String
+name|user
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|appId
+argument_list|,
+name|credentails
+argument_list|,
+name|shouldCancelAtEnd
+argument_list|,
+name|user
+argument_list|,
+name|DelegationTokenRenewerEventType
+operator|.
+name|RECOVER_APPLICATION
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+begin_class
+DECL|class|AbstractDelegationTokenRenewerAppEvent
+specifier|static
+class|class
+name|AbstractDelegationTokenRenewerAppEvent
+extends|extends
+name|DelegationTokenRenewerEvent
+block|{
+DECL|field|credentials
+specifier|private
+name|Credentials
+name|credentials
+decl_stmt|;
+DECL|field|shouldCancelAtEnd
+specifier|private
+name|boolean
+name|shouldCancelAtEnd
+decl_stmt|;
+DECL|field|user
+specifier|private
+name|String
+name|user
+decl_stmt|;
+DECL|method|AbstractDelegationTokenRenewerAppEvent (ApplicationId appId, Credentials credentails, boolean shouldCancelAtEnd, String user, DelegationTokenRenewerEventType type)
+specifier|public
+name|AbstractDelegationTokenRenewerAppEvent
+parameter_list|(
+name|ApplicationId
+name|appId
+parameter_list|,
+name|Credentials
+name|credentails
+parameter_list|,
+name|boolean
+name|shouldCancelAtEnd
+parameter_list|,
+name|String
+name|user
+parameter_list|,
+name|DelegationTokenRenewerEventType
+name|type
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|appId
+argument_list|,
+name|type
 argument_list|)
 expr_stmt|;
 name|this
@@ -4540,6 +4733,9 @@ name|DelegationTokenRenewerEventType
 block|{
 DECL|enumConstant|VERIFY_AND_START_APPLICATION
 name|VERIFY_AND_START_APPLICATION
+block|,
+DECL|enumConstant|RECOVER_APPLICATION
+name|RECOVER_APPLICATION
 block|,
 DECL|enumConstant|FINISH_APPLICATION
 name|FINISH_APPLICATION
