@@ -8218,6 +8218,8 @@ comment|// and is asynchronous in nature.
 name|waitForTokensToBeRenewed
 argument_list|(
 name|rm2
+argument_list|,
+name|tokenSet
 argument_list|)
 expr_stmt|;
 comment|// verify tokens are properly populated back to rm2 DelegationTokenRenewer
@@ -8240,26 +8242,31 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|waitForTokensToBeRenewed (MockRM rm2)
+DECL|method|waitForTokensToBeRenewed (MockRM rm2, HashSet<Token<RMDelegationTokenIdentifier>> tokenSet)
 specifier|private
 name|void
 name|waitForTokensToBeRenewed
 parameter_list|(
 name|MockRM
 name|rm2
+parameter_list|,
+name|HashSet
+argument_list|<
+name|Token
+argument_list|<
+name|RMDelegationTokenIdentifier
+argument_list|>
+argument_list|>
+name|tokenSet
 parameter_list|)
 throws|throws
 name|Exception
 block|{
+comment|// Max wait time to get the token renewal can be kept as 1sec (100 * 10ms)
 name|int
 name|waitCnt
 init|=
-literal|20
-decl_stmt|;
-name|boolean
-name|atleastOneAppInNEWState
-init|=
-literal|true
+literal|100
 decl_stmt|;
 while|while
 condition|(
@@ -8267,56 +8274,39 @@ name|waitCnt
 operator|--
 operator|>
 literal|0
-operator|&&
-name|atleastOneAppInNEWState
 condition|)
 block|{
-name|atleastOneAppInNEWState
-operator|=
-literal|false
-expr_stmt|;
-for|for
-control|(
-name|RMApp
-name|rmApp
-range|:
+if|if
+condition|(
+name|tokenSet
+operator|.
+name|equals
+argument_list|(
 name|rm2
 operator|.
 name|getRMContext
 argument_list|()
 operator|.
-name|getRMApps
+name|getDelegationTokenRenewer
 argument_list|()
 operator|.
-name|values
+name|getDelegationTokens
 argument_list|()
-control|)
-block|{
-if|if
-condition|(
-name|rmApp
-operator|.
-name|getState
-argument_list|()
-operator|==
-name|RMAppState
-operator|.
-name|NEW
+argument_list|)
 condition|)
+block|{
+comment|// Stop waiting as tokens are populated to DelegationTokenRenewer.
+break|break;
+block|}
+else|else
 block|{
 name|Thread
 operator|.
 name|sleep
 argument_list|(
-literal|1000
+literal|10
 argument_list|)
 expr_stmt|;
-name|atleastOneAppInNEWState
-operator|=
-literal|true
-expr_stmt|;
-break|break;
-block|}
 block|}
 block|}
 block|}
